--- a/Survey/explore.html
+++ b/Survey/explore.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <h2>Pollify</h2>
+                <h2>VoteMint</h2>
             </div>
             <nav>
                 <ul class="nav-links">
