--- a/Survey/home.html
+++ b/Survey/home.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar">
             <section class="logo">
-                <h2>Pollify</h2>
+                <h2>VoteMint</h2>
             </section>
             <nav>
                 <ul class="nav-links">
@@ -28,8 +28,8 @@
 
     <section class="main-section">
         <div class="about-box">
-            <h3>About Pollify</h3>
-            <p>Pollify is a decentralized platform where users can create polls, gather opinions, and earn crypto tokens for participating. Whether you're looking for feedback or want to engage with your community, Pollify provides a simple and rewarding way to interact with others.</p>
+            <h3>About VoteMint</h3>
+            <p>VoteMint is a decentralized platform where users can create polls, gather opinions, and earn crypto tokens for participating. Whether you're looking for feedback or want to engage with your community, Pollify provides a simple and rewarding way to interact with others.</p>
         </div>
 
         <div class="action-box">
